[code] change in proto with new schema
add jwt
