# server.go
@@ -1,13 +1,13 @@
 package main
 
-
 import (
 	"context"
 	"fmt"
 	codecs "github.com/amsokol/mongo-go-driver-protobuf"
-	"github.com/dgrijalva/jwt-go"
 	"github.com/go-redis/redis"
+	"github.com/golang/protobuf/proto"
 	"github.com/grpc-ecosystem/grpc-gateway/runtime"
+	pbAuth "github.com/transavro/AuthService/proto"
 	"github.com/transavro/RecommenderService/apihandler"
 	pb "github.com/transavro/RecommenderService/proto"
 	"go.mongodb.org/mongo-driver/bson"
@@ -15,26 +15,22 @@ import (
 	"go.mongodb.org/mongo-driver/mongo/options"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/credentials"
 	"google.golang.org/grpc/metadata"
 	"google.golang.org/grpc/status"
 	"log"
 	"net"
 	"net/http"
-	"strings"
 	"time"
 )
 
 const (
 	atlasMongoHost          = "mongodb://nayan:tlwn722n@cluster0-shard-00-00-8aov2.mongodb.net:27017,cluster0-shard-00-01-8aov2.mongodb.net:27017,cluster0-shard-00-02-8aov2.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority"
-	//developmentMongoHost = "mongodb://dev-uni.cloudwalker.tv:6592"
-	developmentMongoHost = "mongodb://192.1.168.9:27017"
+	developmentMongoHost = "mongodb://dev-uni.cloudwalker.tv:6592"
+	//developmentMongoHost = "mongodb://192.1.168.9:27017"
 	schedularMongoHost   = "mongodb://192.168.1.143:27017"
 	schedularRedisHost   = ":6379"
 	grpc_port        = ":7765"
 	rest_port		 = ":7766"
-	srvCertFile = "cert/server.crt"
-	srvKeyFile  = "cert/server.key"
 )
 
 // private type for Context keys
@@ -47,120 +43,136 @@ const (
 var scheduleCollection, tileCollection *mongo.Collection
 var tileRedis *redis.Client
 
+
+//Temp struct
+type EditorialTemp struct {
+	ID struct {
+		Oid string `json:"$oid"`
+	} `json:"_id"`
+	Title        string   `json:"title"`
+	Portrait     []string `json:"portrait"`
+	Poster       []string `json:"poster"`
+	ContentID    string   `json:"contentId"`
+	IsDetailPage bool     `json:"isDetailPage"`
+	PackageName  string   `json:"packageName"`
+	Target       []string `json:"target"`
+}
+
+
+
 // Multiple init() function
 func init() {
 	fmt.Println("Welcome to init() function")
 	scheduleCollection = getMongoCollection("cloudwalker", "schedule", developmentMongoHost)
 	tileCollection = getMongoCollection("cwtx2devel", "tiles", developmentMongoHost)
 	tileRedis = getRedisClient(schedularRedisHost)
-}
 
-func credMatcher(headerName string) (mdName string, ok bool) {
-	if headerName == "Login" || headerName == "Password" {
-		return headerName, true
-	}
-	return "", false
-}
+	go func() {
 
-// authenticateAgent check the client credentials
-func authenticateClient(ctx context.Context, s *apihandler.RecommendationServiceHandler) (string, error) {
-	if md, ok := metadata.FromIncomingContext(ctx); ok {
-		clientLogin := strings.Join(md["login"], "")
-		clientPassword := strings.Join(md["password"], "")
-		if clientLogin != "nayan" {
-			return "", fmt.Errorf("unknown user %s", clientLogin)
+		//main init
+		// creating pipes for mongo aggregation
+		pipeline := mongo.Pipeline{}
+
+		//Adding stage 2
+		pipeline = append(pipeline, bson.D{{"$project", bson.D{
+			{"title", "$metadata.title"},
+			{"portrait", "$posters.portrait",},
+			{"poster", "$posters.landscape"},
+			{"contentId", "$ref_id"},
+			{"isDetailPage", "$content.detailPage"},
+			{"packageName", "$content.package"},
+			{"target", "$content.target"},}}})
+
+		// creating aggregation query
+		tileCur, err := tileCollection.Aggregate(context.Background(), pipeline)
+		if err != nil {
+			log.Println(err.Error())
 		}
-		if clientPassword != "makasare" {
-			return "", fmt.Errorf("bad password %s", clientPassword)
-		}
-		log.Printf("authenticated client: %s", clientLogin)
-		return "42", nil
-	}
-	return "", fmt.Errorf("missing credentials")
-}
+		for tileCur.Next(context.Background()){
 
-//uthenticate client using jwt
-func auth(ctx context.Context) error {
-	meta, ok := metadata.FromIncomingContext(ctx)
-	if !ok {
-		return status.Errorf(
-			codes.InvalidArgument,
-			"missing context",
-		)
-	}
-
-	authString, ok := meta["authorization"]
-	if !ok {
-		return status.Errorf(
-			codes.Unauthenticated,
-			"missing authorization",
-		)
-	}
-	// validate token algo
-	log.Println("found jwt token")
-	jwtToken, err := jwt.Parse(
-		authString[0],
-		func(token *jwt.Token) (interface{}, error) {
-			if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
-				return nil, fmt.Errorf("bad signing method")
+			var temp EditorialTemp
+			var contentTile pb.ContentTile
+			err = tileCur.Decode(&temp)
+			if err != nil {
+				log.Println(err.Error())
 			}
-			// additional validation goes here.
-			return []byte("transavro"), nil
-		},
-	)
+			contentTile.ContentId = temp.ContentID
+			contentTile.IsDetailPage = temp.IsDetailPage
+			contentTile.PackageName = temp.PackageName
+			if len(temp.Poster) > 0 {
+				contentTile.Poster = temp.Poster[0]
+			}
+			if len(temp.Portrait) > 0 {
+				contentTile.Portrait = temp.Portrait[0]
+			}
+			contentTile.Target = temp.Target
+			contentTile.Title = temp.Title
+			contentTile.TileType = pb.TileType_ImageTile
 
-	if jwtToken.Valid {
-		return nil
-	}
-	if err != nil {
-		return status.Error(codes.Internal, err.Error())
-	}
-	return status.Error(codes.Internal, "bad token")
+			if contentTile.XXX_Size() > 0 {
+				contentByte, err := proto.Marshal(&contentTile)
+				if err != nil {
+					log.Println(err.Error())
+				}
+					if err = tileRedis.HSet("cloudwalkerTiles",contentTile.ContentId, contentByte).Err(); err != nil {
+					log.Println(err.Error())
+				}
+			}
+		}
+
+	}()
 }
 
-func unaryInterceptor(
-	ctx context.Context,
-	req interface{},
-	info *grpc.UnaryServerInfo,
-	handler grpc.UnaryHandler) (interface{}, error) {
-
-	s, ok := info.Server.(*apihandler.RecommendationServiceHandler)
-	if !ok {
-		return nil, status.Errorf(codes.Internal, fmt.Sprintf("unable to cast the server"))
-	}
-	clientID, err := authenticateClient(ctx, s)
+func unaryInterceptor(ctx context.Context, req interface{}, info *grpc.UnaryServerInfo, handler grpc.UnaryHandler) (interface{}, error) {
+	log.Println("unaryInterceptor")
+	err := checkingJWTToken(ctx)
 	if err != nil {
 		return nil, err
 	}
-	ctx = context.WithValue(ctx, clientIDKey, clientID)
 	return handler(ctx, req)
+}
 
-	// auth using jwt
+func checkingJWTToken(ctx context.Context) error{
+	meta, ok := metadata.FromIncomingContext(ctx)
+	if !ok {
+		return status.Error(codes.NotFound, fmt.Sprintf("no auth meta-data found in request" ))
+	}
 
-	//if err := auth(ctx); err != nil {
-	//	return nil, err
-	//}
-	//log.Println("authorization OK")
-	//return handler(ctx, req)
+	token := meta["token"]
+
+	if len(token) == 0 {
+		return  status.Error(codes.NotFound, fmt.Sprintf("Token not found" ))
+	}
+
+	// calling auth service
+	conn, err := grpc.Dial(":7757", grpc.WithInsecure())
+	if err != nil {
+		log.Fatal(err)
+	}
+	defer conn.Close()
+
+	// Auth here
+	authClient := pbAuth.NewAuthServiceClient(conn)
+	_, err = authClient.ValidateToken(context.Background(), &pbAuth.Token{
+		Token: token[0],
+	})
+	if err != nil {
+		return  status.Error(codes.NotFound, fmt.Sprintf("Invalid token:  %s ", err ))
+	}else {
+		return nil
+	}
 }
 
 // streamAuthIntercept intercepts to validate authorization
-func streamAuthIntercept(
-	server interface{},
-	stream grpc.ServerStream,
-	info *grpc.StreamServerInfo,
-	handler grpc.StreamHandler,
-) error {
-
-	// auth using jwt
-	if err := auth(stream.Context()); err != nil {
+func streamIntercept(server interface{}, stream grpc.ServerStream, info *grpc.StreamServerInfo, handler grpc.StreamHandler, ) error {
+	err := checkingJWTToken(stream.Context())
+	if err != nil {
 		return err
 	}
-	log.Println("authorization OK")
 	return handler(server, stream)
 }
 
-func startGRPCServer(address, certFile, keyFile string) error {
+func startGRPCServer(address string) error {
 	// create a listener on TCP port
 	lis, err := net.Listen("tcp", address)
 	if err != nil {
@@ -168,33 +180,22 @@ func startGRPCServer(address, certFile, keyFile string) error {
 	}
 
 	// create a server instance
-
 	redrecObj,err := apihandler.New(":6379")
 	if err != nil {
-		log.Println("nayan",err)
+		return err
 	}
 
 	s := apihandler.RecommendationServiceHandler{
 		RedisConnection:           getRedisClient(schedularRedisHost),
 		CloudwalkerRecommendation: redrecObj,
-		MongoCollection:           getMongoCollection( "test", "cwmovies", atlasMongoHost),
+		MongoCollection:           tileCollection,
 	}
 
-
-	// Create the TLS credentials
-	creds, err := credentials.NewServerTLSFromFile(certFile, keyFile)
-	if err != nil {
-		return fmt.Errorf("could not load TLS keys: %s", err)
-	}
-
-	// Create an array of gRPC options with the credentials
-	_ = []grpc.ServerOption{grpc.Creds(creds), grpc.UnaryInterceptor(unaryInterceptor), grpc.StreamInterceptor(streamAuthIntercept)}
-
-	// create a gRPC server object
-	//grpcServer := grpc.NewServer(opts...)
+	serverOptions := []grpc.ServerOption{grpc.UnaryInterceptor(unaryInterceptor), grpc.StreamInterceptor(streamIntercept)}
 
 	// attach the Ping service to the server
-	grpcServer := grpc.NewServer()                    // attach the Ping service to the server
+	grpcServer := grpc.NewServer(serverOptions...)
+	// attach the Ping service to the server
 	pb.RegisterRecommendationServiceServer(grpcServer, &s) // start the server
 	log.Printf("starting HTTP/2 gRPC server on %s", address)
 	if err := grpcServer.Serve(lis); err != nil {
@@ -203,18 +204,11 @@ func startGRPCServer(address, certFile, keyFile string) error {
 	return nil
 }
 
-func startRESTServer(address, grpcAddress, certFile string) error {
+func startRESTServer(address, grpcAddress string) error {
 	ctx := context.Background()
 	ctx, cancel := context.WithCancel(ctx)
 	defer cancel()
-	mux := runtime.NewServeMux(runtime.WithIncomingHeaderMatcher(credMatcher),)
-
-	//creds, err := credentials.NewClientTLSFromFile(certFile, "")
-	//if err != nil {
-	//	return fmt.Errorf("could not load TLS certificate: %s", err)
-	//}  // Setup the client gRPC options
-	//
-	//opts := []grpc.DialOption{grpc.WithTransportCredentials(creds),}  // Register ping
+	mux := runtime.NewServeMux(runtime.WithIncomingHeaderMatcher(runtime.DefaultHeaderMatcher))
 
 	opts := []grpc.DialOption{grpc.WithInsecure()} // Register ping
 
@@ -254,12 +248,9 @@ func getRedisClient(redisHost string) *redis.Client {
 
 func main() {
 
-	//grpcAddress := fmt.Sprintf("%s:%d", "cloudwalker.services.tv", 7775)
-	//restAddress := fmt.Sprintf("%s:%d", "cloudwalker.services.tv", 7776)
-
 	// fire the gRPC server in a goroutine
 	go func() {
-		err := startGRPCServer(grpc_port, srvCertFile, srvKeyFile)
+		err := startGRPCServer(grpc_port)
 		if err != nil {
 			log.Fatalf("failed to start gRPC server: %s", err)
 		}
@@ -267,7 +258,7 @@ func main() {
 
 	// fire the REST server in a goroutine
 	go func() {
-		err := startRESTServer(rest_port, grpc_port, srvCertFile)
+		err := startRESTServer(rest_port, grpc_port)
 		if err != nil {
 			log.Fatalf("failed to start gRPC server: %s", err)
 		}
